changed index and added foreword

--- a/books/04_Num.html
+++ b/books/04_Num.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./bible.css">
+  <link rel="stylesheet" href="../styles/bible.css">
   <title>Третя rниа Мойсея - Левіти</title>
 </head>
 <body>
@@ -20,8 +20,7 @@
     <li>Від Юди — Нахшон, син Аммінадава.</li>
     <li>Від Іссахара — Натанаїл, син Цуара.</li>
     <li>Від Завулона — Еліяв, син Хелона. </li>
-    <li>Стосовно ж синів Йосифа, то від</li>
-    <li>Єфрема буде Елішама, син Аммігуда, <span class="add">а</span> від Манассії — Ґамалиїл, син Педа-цура.</li>
+    <li>Стосовно ж синів Йосифа, то від Єфрема буде Елішама, син Аммігуда, <span class="add">а</span> від Манассії — Ґамалиїл, син Педа-цура.</li>
     <li>Від Веніяміна — Абідан, син Ґі-деоні.</li>
     <li>Від Дана — Ахієзер, син Амішад-дая.</li>
     <li>Від Ашера — Паґіїл, син Окрана.</li>
@@ -160,7 +159,7 @@
   </ol>
   <h3>Розділ&nbsp;</h3>
   <ol>
-    <li>промовив <span class="YHWH">Господь</span> до Мойсея і Аарона такі слова:</li>
+    <li>І промовив <span class="YHWH">Господь</span> до Мойсея і Аарона такі слова:</li>
     <li>Визнач з-поміж синів Левія загальну кількість нащадків Кегата за їхніми родинами та за родом їхніх батьків, </li>
     <li>від тридцяти років і вище, аж до п’ятдесятилітніх, — усіх військовозобов’язаних — аби виконували праці в Наметі Свідчення.</li>
     <li>Служіння нащадків Кегата в Наметі Свідчення, <span class="add">полягає в турботі про</span> Святе Святих.</li>
@@ -168,7 +167,8 @@
     <li><span class="add">Потім</span> вони покладуть на нього синє шкіряне накриття, а на нього зверху накинуть блакитне покривало і вставлять у його <span class="add">кільця</span> держаки.</li>
     <li>Так само на стіл <span class="add">для хлібів</span> покладання накинуть блакитне покривало, і поставлять на ньому миски, ложки, чаші та кухлі для жертв возливання, а також хліби, які на ньому постійно перебувають.</li>
     <li>На <span class="add">усе</span> це покладуть кармазинову шату і <span class="add">зверху</span> покриють синім шкіряним накриттям та вставлять у його <span class="add">кільця</span> держаки.</li>
-    <li>Далі візьмуть блакитну тканину, і накриють <span class="add">нею</span> світильник для освітлення, його лампадки, щипці до нього, його лійки, і всі його посудини для олії, які використовують під час їхнього служіння, ю і загорнуть його та все його обладнання у синє шкіряне покривало, та й помістять на <span class="add">ноші</span> з жердинами.</li>
+    <li>Далі візьмуть блакитну тканину, і накриють <span class="add">нею</span> світильник для освітлення, його лампадки, щипці до нього, його лійки, і всі його посудини для олії, які використовують під час їхнього служіння,</li>
+    <li>і загорнуть його та все його обладнання у синє шкіряне покривало, та й помістять на <span class="add">ноші</span> з жердинами.</li>
     <li>Потім накриють блакитною тканиною золотий жертовник, і покриють його синім шкіряним накриттям та вставлять у його <span class="add">кільця</span> держаки.</li>
     <li>Далі візьми увесь службовий посуд, який використовується під час служіння у Святині, покладуть <span class="add">його</span> у блакитну тканину та загорнуть його в синє шкіряне покривало і помістять на <span class="add">ноші</span> з жердинами.</li>
     <li>Після цього очистять жертовник від попелу і накриють його пурпурною тканиною.</li>
@@ -446,8 +446,7 @@
     <li><span class="add">Наступним</span> вирушив прапор табору Єфремових нащадків зі своїми військовими підрозділами. На чолі їхніх військових підрозділів <span class="add">стояв</span> Елішама, син Аммігуда.</li>
     <li>Над військовими підрозділами племені Манассієвих нащадків <span class="add">стояв Ґамаліїл, син Педагцура.</li>
     <li>А над військовими підрозділами Веніямінового племені <span class="add">стояв</span> Абідан, син Ґідеоні.</li>
-    <li><span class="add">Нарешті</span> вирушив прапор табору Данових нащадків, як тильна <span class="add">охорона</span> всіх таборів зі своїми військовими</li>
-    <li>підрозділами. На чолі їхніх військових підрозділів <span class="add">стояв</span> Ахієзер, син Аммішаддая.</li>
+    <li><span class="add">Нарешті</span> вирушив прапор табору Данових нащадків, як тильна <span class="add">охорона</span> всіх таборів зі своїми військовими підрозділами. На чолі їхніх військових підрозділів <span class="add">стояв</span> Ахієзер, син Аммішаддая.</li>
     <li>Над військовими підрозділами племені Асирових нащадків <span class="add">стояв</span> Паґіїл, син Окрана.</li>
     <li>А над військовими підрозділами Нефталимовою племені <span class="add">стояв</span> Ахіра, син Енана.</li>
     <li>Таким був похідний стрій нащадків Ізраїля за їхніми <span class="add">військовими</span> підрозділами, коли вони вирушали в дорогу</span>.</li>
@@ -663,8 +662,7 @@
     <li>Насправді ж, ти не привів нас у землю, що тече молоком та медом, і <span class="add">не</span> дав нам у посілість полів та виноградників? А може хочеш виколоти очі цим людям? Ми не підемо!</li>
     <li>Мойсей дуже обурився і звернувся до <span class="YHWH">Господа</span>: Не приймай їхньої жертви! У жодного з них я не взяв навіть осла, і не вчинив нікому з них зла!</li>
     <li>А Кореєві Мойсей сказав: Ти і все твоє угруповання завтра будьте перед <span class="YHWH">Господом</span> — ти, вони і Аарон!</li>
-    <li>Усі візьміть свої кадильниці і</li>
-    <li>покладіть у них ладану. Кожний нехай принесе свою кадильницю перед <span class="YHWH">Господом</span> — двісті п’ятдесят кадильниць. Ти і Аарон також <span class="add">принесіть</span> свої кадильниці.</li>
+    <li>Усі візьміть свої кадильниці і покладіть у них ладану. Кожний нехай принесе свою кадильницю перед <span class="YHWH">Господом</span> — двісті п’ятдесят кадильниць. Ти і Аарон також <span class="add">принесіть</span> свої кадильниці.</li>
     <li>Тож кожний узяв свою кадильницю, усі поклали в них вогню та насипали на нього ладану, і стали біля входу в Намет Свідчення разом з Мойсеєм та Аароном.</li>
     <li>Корей зібрав проти них усе своє угруповання біля входу <span class="add">в</span> Намет Свідчення. І ось усій громаді з’явилася <span class="YHWH">Господня</span> слава.</li>
     <li><span class="YHWH">Господь</span> заговорив до Мойсея та Аарона, кажучи:</li>
@@ -878,8 +876,7 @@
     <li>Валаам відповів ослиці: Бо ти поглумилася з мене! Якби у моїй руці був меч, я би тебе зараз убив!</li>
     <li><span class="add">Тоді</span> ослиця каже Валаамові: Хіба я не твоя ослиця, на якій ти їздиш від своєї молодості аж до сьогодні? Хіба є у мене звичай так з тобою чинити? Він же відповів: Ні.</li>
     <li>І <span class="add">тут</span> <span class="YHWH">Господь</span> відкрив Валаамові очі. Він побачив <span class="YHWH">Господнього</span> ангела, який стояв на дорозі, з оголеним мечем у своїй руці. Він схилився і впав долілиць.</li>
-    <li>А <span class="YHWH">Господній</span> ангел каже йому:</li>
-    <li>Чому ось уже втретє ти б’єш свою ослицю? Адже це я вийшов, щоб протистояти <span class="add">тобі</span>, тому що <span class="add">твій</span> шлях згубний переді мною.</li>
+    <li>А <span class="YHWH">Господній</span> ангел каже йому: Чому ось уже втретє ти б’єш свою ослицю? Адже це я вийшов, щоб протистояти <span class="add">тобі</span>, тому що <span class="add">твій</span> шлях згубний переді мною.</li>
     <li>Ослиця бачила мене і тричі уступала мені. Якби вона не звернула переді мною, я вже вбив би тебе, а її залишив би живою.</li>
     <li>Валаам сказав <span class="YHWH">Господньому</span> ангелові: Згрішив я, оскільки не знав, що <span class="add">це</span> ти стояв навпроти мене на дорозі. Тепер же, якщо це тобі не подобається, я повернуся до себе!</li>
     <li>Але <span class="YHWH">Господній</span> ангел сказав Валаамові: Іди з <span class="add">цими</span> людьми! Однак говоритимеш тільки те, що я скажу тобі. І Валаам пішов з князями Валака.</li>
@@ -895,8 +892,7 @@
     <li>Тоді Валаам сказав Валакові: Збудуй мені тут сім жертовників і приготуй мені тут сім бичків та сім баранів.</li>
     <li>Валак зробив так, як йому сказав Валаам і приніс Валак та Валаам на <span class="add">кожному</span> жертовнику по бичкові й баранові.</li>
     <li>Далі Валаам сказав Валакові: Стій біля твого всепалення, а я піду. Можливо з’явиться <span class="YHWH">Господь</span> для зустрічі зі мною. Те, що Він мені об’явить, я сповіщу тобі. Тож він зійшов на голу вершину <span class="add">гори</span>.</li>
-    <li>Зустрівся Бог з Валаамом і той</li>
-    <li>сказав Йому: Сім жертовників приготував я і на <span class="add">кожному</span> з них приніс по бичкові й баранові.</li>
+    <li>Зустрівся Бог з Валаамом і той сказав Йому: Сім жертовників приготував я і на <span class="add">кожному</span> з них приніс по бичкові й баранові.</li>
     <li><span class="add">В той час</span> <span class="YHWH">Господь</span> вклав слово в уста Валаама, сказавши: Повертайся до Валака і скажи йому так...</li>
     <li>Тож, коли Валаам повернувся до нього, той з усіма моавськими князями все ще стояв біля свого всспаленння.</li>
     <li><span class="add">Валаам</span> виголосив свою притчу сказавши: З Араму припровадив мене Валак, моавський цар, — з гір сходу: Прийди й прокляни мені Якова; прийди й наведи мені прокляття на Ізраїля!</li>
@@ -1054,8 +1050,7 @@
     <li>А якщо в нього немає й дочки, то передайте його спадщину його братам. </li>
     <li>Коли ж у нього немає братів, то дайте його спадщину братам його батька.</li>
     <li>А якщо не буде у його батька братів, то дайте його спадщину його найближчому родичеві з його родини, аби він успадкував її. І буде це для Ізраїльських нащадків законною постановою, згідно зі заповіддю <span class="YHWH">Господа</span> Мойсеєві.</li>
-    <li>Тоді сказав <span class="YHWH">Господь</span> Мойсеєві: Зійди на оцю гору Аварім і подивись на</li>
-    <li>край, який Я даю Ізраїльським нащадкам.</li>
+    <li>Тоді сказав <span class="YHWH">Господь</span> Мойсеєві: Зійди на оцю гору Аварім і подивись на край, який Я даю Ізраїльським нащадкам.</li>
     <li><span class="add">Після того, як</span> ти побачиш його, то приєднаєшся до свого народу, як приєднався і твій брат Аарон.</li>
     <li>Адже, замість того, щоб явити Мою святість перед людьми у зв’язку з водою в пустелі Сін, коли громада збунтувалася, ви порушили Мій наказ. Це — вода Меріви в Кадеші, <span class="add">в</span> пустелі Сін.</li>
     <li><span class="add">Тому</span> Мойсей промовив до <span class="YHWH">Господа</span> <span class="add">такі</span> слова:</li>
@@ -1083,7 +1078,7 @@
     <li>А на початку <span class="add">кожного</span> вашого нового місяця принесете <span class="YHWH">Господу</span> в жертву всепалення двох тельців з великої худоби, одного барана і сімох однолітніх ягнят, без вади,</li>
     <li>три десятих ефи пшеничного борошна, замішаного на олії в хлібну жертву, на одного бичка, а також дві десятих ефи пшеничного борошна, замішаного на олії в хлібну жертву, на одного барана</li>
     <li>і по десятині <span class="add">ефи</span> пшеничного борошна, замішаного на олії в хлібну жертву на одне ягня. Це всепалення, вогняна жертва любі пахощі <span class="YHWH">Господу</span>.</li>
-    <li>їхні жертви возливання становитимуть: пів-гіна <span class="add">вина</span> на одного бичка, третина гіна на барана і четвертина гіна вина на ягня. Це щомісячне всепалення на <span class="add">початку</span> кожного нового місяця року.</li>
+    <li>Їхні жертви возливання становитимуть: пів-гіна <span class="add">вина</span> на одного бичка, третина гіна на барана і четвертина гіна вина на ягня. Це щомісячне всепалення на <span class="add">початку</span> кожного нового місяця року.</li>
     <li>Крім постійного всепалення разом з його жертвою возливання, приносьте <span class="add">також</span> одного козла в жертву за гріх для <span class="YHWH">Господа</span>.</li>
     <li>А першого місяця, чотирнадцятого дня місяця, Пасха <span class="YHWH">Господня</span>.</li>
     <li>П’ятнадцятого дня того ж місяця, <span class="add">також</span> свято. Протягом семи днів їстимете опрісноки.</li>
@@ -1097,6 +1092,7 @@
     <li>Сьомого дня знову будуть у вас святі збори. Не здійснюйте жодної буденної праці.</li>
     <li>А в день первоплодів, коли будете приносити <span class="YHWH">Господу</span> нову хлібну жертву у ваше <span class="add">свято</span> тижня, будуть у вас святі збори. Не виконуйте жодної буденної праці.</li>
     <li>Принесіть у жертву всепалення — приємні пахощі для <span class="YHWH">Господа</span> — двох тельців з великої худоби, одного барана і сім однолітніх ягнят.</li>
+    <li>А до них <span class="add">хлібну</span> жертву: три десятих <span class="add">ефи</span> пшеничного борошна, замішаного на олії на одного тельця та дві десятих <span class="add">ефи</span> на одного барана,</li>
     <li>по одній десятій <span class="add">ефи</span> на кожне ягня з усіх семи ягнят,</li>
     <li>а <span class="add">також</span> одного козла, щоби звершити за вас викуплення.</li>
     <li><span class="add">Це</span> має приноситись, крім постійної жертви всепалення, а також її хлібної жертви та її жертви возливання. <span class="add">Всі</span> вони мають у вас бути без вади.</li>
@@ -1216,7 +1212,7 @@
     <li>Вони сказали Мойсеєві: Ми, твої слуги, перерахували воїнів, які були під нашим керівництвом. Жодного <span class="add">з них</span> ми не втратили.</li>
     <li>Як дар для <span class="YHWH">Господа</span>, кожен <span class="add">з нас</span>, хто знайшов <span class="add">якийсь</span> золотий виріб — браслет, ланцюжок, обручку, сережку чи защіпку для волосся — ми принесли, щоб звершити за наші душі викуплення перед <span class="YHWH">Господом</span>.</li>
     <li>Мойсей та священик Елеазар прийняли від них золото в різних виготовлених виробах.</li>
-    <li>Всього золота в <span class="add">цьому</span> особливому дарі, отриманому від тисяцьких і від сотників для <span class="YHWH">Господа</span>, було шістнадцять тисяч сімсот п’ятдесят <span title="Тобто прибл. 190 кг">шеклів*</span>.</li>
+    <li>Всього золота в <span class="add">цьому</span> особливому дарі, отриманому від тисяцьких і від сотників для <span class="YHWH">Господа</span>, було <span title="Тобто прибл. 190 кг">шістнадцять тисяч сімсот п’ятдесят шеклів*</span>.</li>
     <li>Рядові воїни взяли здобич кожен особисто для себе.</li>
     <li>Прийнявши золото від тисяцьких та від сотників Мойсей і священик Елеазар, внесли його в Намет Свідчення як пам’ять для ізраїльських синів перед <span class="YHWH">Господом</span>.</li>
   </ol>
@@ -1381,8 +1377,7 @@
     <li>або в гніві вдарить його своєю рукою так, що той помре, <span class="add">то</span> той, хто вдарив, неодмінно має померти, бо він є убивцею. Кровний месник може вбити вбивцю, щойно його зустріне.</li>
     <li>Але якщо хтось штовхне когось випадково, без ворожого наміру, або кине на нього будь-яким предметом без злого наміру,</li>
     <li>чи не зауваживши когось, кине навіть каменем, який впаде на нього, і він помре, хоч не був його ворогом і не бажав йому зла,</li>
-    <li>то нехай громада розсудить між</li>
-    <li>тим хто вдарив, і між кровним месником за цими постановами.</li>
+    <li>то нехай громада розсудить між тим хто вдарив, і між кровним месником за цими постановами.</li>
     <li>Громада має захистити такого вбивцю від руки кровного месника. Громада поверне його до міста його сховища, куди він утік. Тож він житиме там до смерті великого священика, помазаного святим миром.</li>
     <li>Однак, коли вбивця вийде поза межі свого міста-сховища, куди він утік,</li>
     <li>а його кровний месник зустріне його поза межами його міста-сховища, і кровний месник уб’є вбивцю, то він не буде винуватий.</li>
@@ -1397,8 +1392,7 @@
   <h3>Розділ&nbsp;</h3>
   <ol>
     <li>У той час прийшли старійшини батьківських родин нащадків Гілеада, сина Макіра, онука Манассії, з роду нащадків Йосифа, і промовили до Мойсея та до князів — старійшин племен Ізраїльських нащадків по батьківській лінії</li>
-    <li>такі слова: Тобі, нашому володарю, <span class="YHWH">Господь</span> заповів дати землю в</li>
-    <li>спадщину Ізраїльтянам. <span class="YHWH">Господь</span> <span class="add">також</span> сказав нашому володарю дати спадщину нашого брата Целофехада його дочкам.</li>
+    <li>такі слова: Тобі, нашому володарю, <span class="YHWH">Господь</span> заповів дати землю в спадщину Ізраїльтянам. <span class="YHWH">Господь</span> <span class="add">також</span> сказав нашому володарю дати спадщину нашого брата Целофехада його дочкам.</li>
     <li>Але коли вони вийдуть заміж за когось зі синів одного з племен Ізраїлю, то їхня спадщина відійде від спадщини наших батьків і буде приєднана до спадщини племені, в яке вони вийдуть <span class="add">заміж. Так частина спадщини, отриманої</span> жеребкуванням відійде від нашого спадку.</li>
     <li>Коли ж в Ізраїльських нащадків буде ювілейний <span class="add">рік</span>, то їхня спадщина буде долучена до спадку племені, до якого вони належатимуть, а спадок племені наших батьків зменшиться <span class="add">через відчуження</span> їх спадщини.</li>
     <li>Відповідно до <span class="YHWH">Господнього</span> повеління Мойсей сказав Ізраїльським нащадкам такі слова: Слушно говорить плем’я нащадків Йосифа.</li>
@@ -1411,8 +1405,6 @@
     <li>Вони вийшли заміж в родині нащадків Манассії, сина Йосифа і їхня спадщина залишилася в племені родини їхнього батька.</li>
     <li>Ось такі постанови і присуди (права) <span class="YHWH">Господь</span> заповів через Мойсея Ізраїльтянам на рівнинах Моаву, по близу Йордану, навпроти Єрихона</li>
   </ol>
-
-
 
 </body>
 </html>
