--- a/books/05_Deut.html
+++ b/books/05_Deut.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./bible.css">
+  <link rel="stylesheet" href="../styles/bible.css">
   <title>Второзаконня (повторення закону) | П'ята книга Мойсея</title>
 </head>
 <body>
@@ -123,7 +123,7 @@
     <li>Тоді ж я звернувся до Ісуса з таким наказом: Твої очі бачили все, що <span class="YHWH">Господь</span>, ваш Бог, учинив із цими двома царями. Так само <span class="YHWH">Господь</span> зробить з усіма царствами, до яких ти направляєшся.</li>
     <li>Не бійтеся їх, оскільки <span class="YHWH">Господь</span>, ваш Бог, <span class="add">з вами</span>. Він воюватиме за вас!</li>
     <li>У той час я благав <span class="YHWH">Господа</span>, кажучи:</li>
-    <li>Владико, <span class="YHWH">Господи</span>, Ти почав виявляти Своєму слузі Свою велич — могутню Свою руку і підняте рамено! <span class="add">Адже</span> Який ще бог на небі чи на землі здатний звершувати такі справи, як Твої, — як Твої <span class="add">потужні</span> сили?</li>
+    <li>Владико, Господи, Ти почав виявляти Своєму слузі Свою велич — могутню Свою руку і підняте рамено! <span class="add">Адже</span> Який ще бог на небі чи на землі здатний звершувати такі справи, як Твої, — як Твої <span class="add">потужні</span> сили?</li>
     <li>Тож дозволь, щоб я перейшов і побачив чудовий край, що за Йорданом, — ті прекрасні гори та Ліван!</li>
     <li>Але <span class="YHWH">Господь</span> розгнівався на мене через вас і не послухав мене. Разом з тим <span class="YHWH">Господь</span> сказав мені: Досить тобі! Не говори більше Мені <span class="add">про</span> цю справу.</li>
     <li>Піднімись на вершину гори Пісі и і направ свої очі на захід, на північ, на південь та на схід. Оглянь своїми очима звідти, оскільки ти не перейдеш через цей Йордан!</li>
@@ -325,7 +325,7 @@
     <li>А коли <span class="YHWH">Господь</span> послав вас із Ка деш-Барнеа, кажучи: Вирушайте і заволодійте землею, яку Я дав вам, ви виявились неслухняними наказові <span class="YHWH">Господа</span>, вашого Бога, не повірили Йому і не послухались Його голосу.</li>
     <li>Ви були непокірні <span class="YHWH">Господу</span> з того дня, як я вас знаю.</li>
     <li>Впавши перед <span class="YHWH">Господом</span>, я сорок днів і сорок ночей, припадаючи, <span class="add">молився</span>, тому що <span class="YHWH">Господь</span> сказав, що вигубить вас.</li>
-    <li>Молячись до <span class="YHWH">Господа</span>, я казав: Владико <span class="YHWH">Господи</span>, не губи Свого народу і Своєї спадщини, яку Своєю величчю Ти визволив, та яку Ти потужною рукою вивів з Єгипту.</li>
+    <li>Молячись до <span class="YHWH">Господа</span>, я казав: Владико Господи, не губи Свого народу і Своєї спадщини, яку Своєю величчю Ти визволив, та яку Ти потужною рукою вивів з Єгипту.</li>
     <li>Згадай Своїх слуг: Авраама, Ісаака та Якова. Не зважай на впертість цього народу, на його беззаконня і його гріх,</li>
     <li>аби у <span class="add">тому</span> краю, з якого Ти нас вивів, не говорили таких слів: Оскільки <span class="YHWH">Господь</span> був неспроможний ввести їх у землю, яку Він обіцяв їм; оскільки зненавидів їх, то Він вивів їх, щоб знищити в пустелі!</li>
     <li>Адже вони є Твоїм народом і Твоєю спадщиною, яку Ти визволив Своєю силою і Своїм простягнутим раменом!</li>
