--- a/books/01_Gen.html
+++ b/books/01_Gen.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/bible.css">
-  <title>Document</title>
+  <title>Буття | Перша книга Мойсея</title>
 </head>
 <body>
   <h3>Розділ&nbsp;</h3>
