--- a/books/03_Lev.html
+++ b/books/03_Lev.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/bible.css">
-  <title>Третя rниа Мойсея - Левіти</title>
+  <title>Левіти | Третя книга Мойсея</title>
 </head>
 <body>
 
