--- a/books/02_Ex.html
+++ b/books/02_Ex.html
@@ -11,15 +11,16 @@
 
 <h3>Розділ&nbsp;</h3>
 <ol>
-<li> Ось імена синів Ізраїля, які переселились в Єгипет з Яковом. Кожен прийшов зі своєю родиною.</li>
-<li>Рувим, Симеон, Левій і Юда; з Іссахар, Завулон і Веніямін;</li>
+<li>Ось імена синів Ізраїля, які переселились в Єгипет з Яковом. Кожен прийшов зі своєю родиною.</li>
+<li>Рувим, Симеон, Левій і Юда;</li>
+<li>Іссахар, Завулон і Веніямін;</li>
 <li>Дан, Нефталим, Ґад і Асир.</li>
 <li>Усіх же осіб, які вийшли з лона Якова, було сімдесят душ. А Йосиф <span class="add">уже</span> перебував у Єгипті.</li>
 <li>Та Йосиф помер. Повмирали усі його брати й увесь той рід.</li>
 <li>А нащадки Ізраїля <span class="add">все</span> народжувалися і зростали. Вони множилися і стали вельми численними, так що край був наповнений ними.</li>
 <li>Але в Єгипті зійшов на <span class="add">трон</span> новий цар, який не знав Йосифа.</li>
 <li>Він сказав своїм людям: Ось народ Ізраїльських нащадків численніший і сильніший за нас.</li>
-<li>10 Тож давайте перехитримо їх, аби вони не множилися. Щоб на випадок виникнення у нас війни вони не приєднались до ворогів і не почали воювати проти нас та не залишили <span class="add">наш</span> край.</li>
+<li>Тож давайте перехитримо їх, аби вони не множилися. Щоб на випадок виникнення у нас війни вони не приєднались до ворогів і не почали воювати проти нас та не залишили <span class="add">наш</span> край.</li>
 <li>Таким чином були настановлені над <span class="add">ізраїльтянами</span> наглядачі за роботами, щоб гнобити їх примусовою працею. Вони будували фараонові міста-склади для запасів: Пітом і Рамсес.</li>
 <li>Але чим більше цей <span class="add">народ</span> пригноблювали, тим численнішим він ставав і значно поширювався. <span class="add">Єгиптяни</span> відчували щодо Ізраїлевих нащадків огиду <span class="add">і страх.</li>
 <li>Тому вони безжалісно примушували ізраїльтян <span class="add">важко працювати.</li>
